--- a/Kartashev Pii 3/README
+++ b/Kartashev Pii 3/README
@@ -1,9 +1,10 @@
 Зачем нужны вилки?
 На GitHub вилка - это копия какого-либо другого репозитория GitHub со ссылкой на репо, из которого оно было скопировано.
 *****
--	Как получить ZIP-архив репозитория?
-Зеленая кнопка Clone or Download
-*********
--	Что делают кнопки Watch (Unwatch) и Star (Unstar) рядом с кнопкой Fork?
-кнопки Watch (Unwatch)-сколько просмотрело ваш репозитарий
-Star (Unstar)- не нашел((((((((
+# Как получить ZIP-архив репозитория?
+
+Нужно зайти в настройки и найти раздел Danger Zone. Затем нажать на кнопку “Archive this repository”. Возле названия вашего репозитория появится метка “Archived”, а все кнопки редактирования станут неактивными.
+
+# Что делают кнопки Watch (Unwatch) и Star (Unstar) рядом с кнопкой Fork?
+
+Watch делает вас наблюдателем за репозиторием. А Stars добавляет репозиторий в избранное, показывает вашу заинтересованность в нем.
